update deps, update codes, refactor